<resources>
    <string name="unlgoin">Salir</string>
    <string name="change">Cargando ...</string>
    <string name="anonyme">Sin usuario (Anonimo)</string>
    <string name="rescaning">PRECIONA PARA ESCANEAR NUEVAMENTE</string>
    <string name="storage_clean">No se encontraron productos en el dispositivo, Intente agregar un producto</string>
    <string name="server_clean">No se encontraron productos en el servidor</string>
    <string name="local_clean">No se encontraron productos en la base de datos local</string>
    <string name="p2pproduct_clean">Encuentre un local cercano para conectarse...</string>
    <string name="serverClient_clean">La lista del servidor esta vacia...</string>
    <string name="asistent_clean">No se encontraron asistentes cercanos...</string>
    <string name="app_id">10005006310-dcsd6e73cgg04hutg88b2h2hdfichgfd.apps.googleusercontent.com</string>
    <string name="facebook_app_id">3032761643672289</string>
    <string name="fb_login_protocol_scheme">fb3032761643672289</string>
    <string name="contry">Pais</string>
    <string name="apodo">Apodo</string>
    <string name="nombre">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="passwordRepet">Repetir contraseña</string>
    <string name="prompt_telefono">Numero de telefono</string>
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Contraseña incorrecta must be >5 characters</string>
    <string name="invalid_passwordRepet">Repite la contraseña para ingresar</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button_client">Iniciar como Cliente</string>
    <string name="login_button_admin">Iniciar como Empleado</string>
    <string name="login_text_coal">Iniciar session</string>
    <string name="login_text_user_anonime">Dejalo para despues</string>
    <string name="login_not_register">El usuario no existe ¿Desea registrarse?</string>
    <string name="login_google_register">Iniciar session con gogole</string>
    <string name="login_facebook_register">Iniciar session con facebook</string>
    <string name="login_register">Registrarse </string>
    <string name="title_activity_init_precentation">InitPrecentation</string>
    <string name="title_activity_main_cliente">MainCliente</string>
    <string name="app_name">MaxMarkets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Max Markets Platinum</string>
    <string name="nav_header_subtitle">1edw333@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_home">Casa</string>
    <string name="menu_CallFinalUser">Cliente</string>
    <string name="menu_estadisticas">Analiticas</string>
    <string name="menu_empresasub">Empleados</string>
    <string name="menu_notificactions">Notificaciones</string>
    <string name="menu_cofiguration">Configuración</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_inicio_second">Productos en total</string>
    <string name="home_tab_menus_storage">Dispositivo</string>
    <string name="home_tab_menus_server">Servidor</string>
    <string name="home_tab_menus_local">Local</string>
    <string name="home_tab_menus_client_server">Clientes (Todos)</string>
    <string name="home_tab_menus_client_local">Clientes (Local)</string>
    <string name="home_tab_menus_analitics_client">Clientes</string>
    <string name="home_tab_menus_analitics_product">Productos</string>
    <string name="home_tab_menus_notification_product">Productos</string>
    <string name="home_tab_menus_notification_providers">Proveedores</string>
    <string name="home_tab_menus_empleados_empleados">Empleados</string>
    <string name="home_tab_menus_empleados_mensajes">Mensajes</string>
    <string name="home_tab_menus_emṕleados_tareas">Tareas</string>
    <string name="home_title_admin">Jefe</string>
    <string name="home_title_admin_fun">(Funciones)</string>
    <string name="home_title_user">Usuario</string>
    <string name="home_title_user_fun">(Funciones)</string>
    <string name="home_error_button">Reiniciar session</string>
    <string name="home_error_anonime">Continuar sin internet</string>
    <string name="home_anonime_title">Anonimo</string>
    <string name="home_anonime_fasted">Funciones (Rapidas)</string>
    <string name="home_buy_fast">Lista de codigos</string>
    <string name="home_shoping_buy_qr">Lista de codigos QR</string>
    <string name="home_action_panel_title">Acciones</string>
    <string name="home_action_panel_details">Controle las acciones de sus empleados, registros o ultimos accesos</string>
    <string name="home_employed_panel_title">Tareas de empleados</string>
    <string name="home_employed_panel_details">Asigne tareas o vea las ultimas tareas asignadas a sus empleados de su establecimiento</string>
    <string name="home_providers_panel_title">Abastecimiento</string>
    <string name="home_providers_panel_details">Ponga en prioridad los productos mas vendidos para su respectivo abastecimiento</string>
    <string name="home_organize_panel_title">Organize sus productos</string>
    <string name="home_organize_panel_details">Modifique y organize sus productos por bloques</string>
    <string name="home_register_panel_title">Registrar un producto</string>
    <string name="home_register_panel_details">Inserte la informacion de su producto, si este fue registrado sera notificado</string>
    <string name="home_sincronize_panel_title">Sincronize los datos (Servidor)</string>
    <string name="home_sincronize_panel_details">Vincule, deslige ,carge , descarge todos sus datos con el servidor general de todos los centros comerciales</string>
    <string name="home_sincronize_local_panel_title">Sincronize los datos (Local)</string>
    <string name="home_sincronize_local_panel_details">Vincule, deslige ,carge , descarge todos los datos con la base de datos local de la tienda o centro comercial</string>
    <string name="home_search_panel_title">Buscar un producto</string>
    <string name="home_search_panel_details">Encunetra el producto ideal en su almacenamiento interno, base de datos local o en el servidor</string>
    <string name="home_emit_panel_title">Emitir</string>
    <string name="home_emit_panel_details">Selecione los productos o servicios registrados que decee emitir para todos los clientes conectados</string>
    <string name="home_client_panel_title">Clientes</string>
    <string name="home_client_panel_details">Interaccione con los clientes o dispositivos cercanos para enviarles anuncios o ofertas</string>
    <string name="home_receipts_panel_title">Recibos</string>
    <string name="home_receipts_panel_details">Genere , ingrese o modifique los recibos de su local</string>
    <string name="home_history_panel_title">Historia de productos</string>
    <string name="home_history_panel_details">Vea los cambios a lo largo del tiempo de cada uno de sus productos</string>
    <string name="home_config_panel_title">Configuracion de tienda</string>
    <string name="home_config_panel_details">Configure su local con todas las caracteristicas para ser reconocido facilmente </string>
    <string name="home_analitic_panel_title">Analiticas</string>
    <string name="home_analitic_panel_details">Observe las anliticas de su empresa en el centro comercial</string>
    <string name="home_fast_qr_panel_title">Escaneo Rapido</string>
    <string name="home_fast_qr_panel_details">Escanee de forma rapida y delivere que decea hacer , agregar, listar, o actualizar</string>
    <string name="home_error_panel_title">SQL INJECT [ERROR]</string>
    <string name="home_error_panel_details">Funcion no encontrada actualize la aplicacion o contactese  con el administrador</string>
    <string name="home_user_shoping_local_qr_panel_title">Compra rapida</string>
    <string name="home_user_shoping_local_qr_panel_details">Genere una cuenta con la lista de los productos que vaya recolectando utilizando el QR</string>
    <string name="home_user_products_panel_title">Productos</string>
    <string name="home_user_products_panel_details">Vea en tiempo real todos los productos de todas las tiendas actualmente en su circulo de Wifi-Direct y agregelos a su compra</string>
    <string name="home_user_stores_panel_title">Tiendas</string>
    <string name="home_user_stores_panel_details">Vea en tiempo real todas las tiendas disponibles actualmente en su entorno con Wifi-Direct</string>
    <string name="home_user_vincule_panel_title">Vincule sus datos a su cuenta</string>
    <string name="home_user_vincule_panel_details">Controle la vinculacion de sus datos a la nube para ser utilizados por internet</string>
    <string name="home_user_filter_store_panel_title">Filtros</string>
    <string name="home_user_filter_store_panel_details">Inserte filtros para ubicar el producto o servicio segun las caracteristicas de la tienda o el producto</string>
    <string name="home_user_search_panel_title">Busqueda</string>
    <string name="home_user_search_panel_details">Busqueda de un producto o servicio en particular</string>
    <string name="home_user_interact_panel_title">Interacciones</string>
    <string name="home_user_interact_panel_details">Solicite un encargo , ayuda o un en servicio en la tienda descubriendo dispositivos cercanos</string>
    <string name="home_user_accounts_panel_title">Mis cuentas</string>
    <string name="home_user_accounts_panel_details">Vea todas sus cuentas de, Compras rapidas , Generadas o enviadas , listas o encargadas</string>
    <string name="home_user_shoping_qr_panel_title">Informacion QR o Barras</string>
    <string name="home_user_shoping_qr_panel_details">Obtenga la informacion de sus productos mediante el QR o codigo de barras</string>
    <string name="titleUser">Usuario Test</string>
    <string name="menu_products">Home(Userio)</string>
    <string name="menu_location">Ubicaciones</string>
    <string name="menu_orders">Ordenes</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="notasignen">No asignado</string>
    <string name="voidasigned">Vacio</string>
    <string name="titleAdmin">Asociado</string>
    <string name="titleAdminSeudo">(Jefe)</string>
    <string name="titleHomeChange">Bienvenido</string>
    <string name="titleHomeFastBy">Escanee su producto</string>
    <string name="titleProuctos">Vista de productos</string>
    <string name="titleProuctoSingle">Nombre del producto</string>
    <string name="titleCorrecto">Preciona para escanear nuevamente</string>
    <string name="titleRegister">Registro</string>
    <string name="titleRegisterDetails">Inserte sus datos para comenzar con el registro</string>
    <string name="titleRegisterEmployed">Escanear Inicio</string>
    <string name="titleRegisterAnonime">Anonimamente</string>
    <string name="titleRegisterButton">Registrate ahora</string>
    <string name="titleLoginUnconon">Rellene todos las campos</string>
    <string name="titleRegisterAnotationDetails">Llene los campos y luego registrese en nuestro servicio, tambien puede registrarse utilizando el QR otorgado por el Dueño del local si es empleado</string>
    <string name="config_company">Empresa</string>
    <string name="config_company_details">Modifica la visualisacion de tu puesto o local para los usuarios</string>
    <string name="config_company_icon">Icono</string>
</resources>