<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/img"
android:theme="@style/ThemeOverlay.finalproductos.FullscreenContainer"
tools:context=".ui.View.fragment.Register">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:backgroundTint="@color/md_green_A400"
        android:progressTint="@color/md_light_green_A200"
        android:progressBackgroundTint="@color/md_green_A400"
        android:foregroundTint="@color/md_green_A400"
        android:id="@+id/PBloading"
        android:indeterminate="true"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/md_blue_400"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fondEdit"
        app:layout_constraintEnd_toEndOf="@+id/fondEdit"
        app:layout_constraintStart_toStartOf="@+id/fondEdit"
        app:layout_constraintTop_toTopOf="@+id/fondEdit"
        tools:visibility="visible"/>

    <eightbitlab.com.blurview.BlurView
        android:layout_margin="30dp"
        android:id="@+id/fondEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
        android:background="@color/white_overlay"
            android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layoutMode="opticalBounds"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider"
            android:backgroundTint="@color/md_blue_400"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/ETusername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/md_blue_900" />

        <EditText
            android:id="@+id/ETpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />


        <View
            android:id="@+id/divider3"
            android:backgroundTint="@color/md_blue_400"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />


        <EditText
            android:id="@+id/ETpasswordRepet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/passwordRepet"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/ETtelefono"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_telefono"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/ETname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/nombre"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/ETapodo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/apodo"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/ETcontry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/contry"
            android:inputType="textAutoComplete"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF" />

        <Button

            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/md_blue_400"
            android:enabled="true"
            android:text="Registrarse"
            android:textColor="#F3F3F3"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>
    </eightbitlab.com.blurview.BlurView>


</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>