<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.View.fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarParent"
        style="@style/BarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/md_white_1000"
            app:contentScrim="@color/md_blue_300"
            app:expandedTitleGravity="start|bottom"
            app:expandedTitleMarginBottom="25dp"
            app:expandedTitleTextAppearance="@style/TextTitle"
            app:expandedTitleTextColor="@color/md_white_1000"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:scrimAnimationDuration="@integer/material_motion_duration_medium_1"
            app:titleCollapseMode="scale">
            <!--  En caso de que la barra tambien desaparesca          app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"-->




            <FrameLayout
                android:id="@+id/FLragmentCameraTool"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_black_1000"
                app:layout_constraintHeight_max="250dp"
                app:layout_constraintWidth_max="250dp"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/BarActiveToolBar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:paddingTop="25dp"
                android:background="@color/black_overlay"
                android:contentInsetStart="0dp"
                android:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|snap|snapMargins"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/titleHomeFastBy"
                app:titleTextColor="@color/md_blue_500">

            </androidx.appcompat.widget.Toolbar>

            <ProgressBar
                android:id="@+id/PBbarList"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#000000"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:indeterminateOnly="true"
                android:indeterminateTint="#11FF00"
                android:indeterminateTintMode="src_atop"
                android:progressBackgroundTint="#000000"
                android:progressTint="#000000"
                android:requiresFadingEdge="horizontal"
                android:secondaryProgressTint="#000000"
                android:soundEffectsEnabled="true"
                android:visibility="gone" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        style="@style/DrawableFondTabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/LLAnonime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/CVPrimaryAnonime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp"
                android:layout_margin="7dp"
                app:cardElevation="7dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/TVEncargoAnonime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:drawableLeft="@drawable/baseline_qr_code_2_24"
                        android:text="@string/home_shoping_buy_qr"
                        android:textSize="15dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/baseline_functions_24"
                        android:drawableTint="@color/md_green_A700"
                        android:text="@string/home_buy_fast"
                        android:textColor="@color/md_green_A700"
                        android:textSize="15dp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"
                android:id="@+id/RVMenuHomeAnoime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>